# python-plugin-system

./: CMakeLists.txt  README.md  build_run.sh  imgui_python_binding.h  main.cpp  plugin_loader.cpp  plugin_loader.h  plugin_manager.cpp  plugin_manager.h
plugins/smoother/: CMakeLists.txt  smoother.cpp  smoother.py
plugins/test/: CMakeLists.txt  test.py
